# todo-list

./: .editorconfig  .env.docker  .gitignore  API.md  AUTH_SETUP_EXPLAINED.md  BETTER_AUTH_FIX.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DOCUMENTATION_INDEX.md  ENVIRONMENT_SETUP_GUIDE.md  ENVIRONMENT_VARIABLES.md  FREE_DEPLOYMENT_GUIDE.md  HUGGINGFACE_DEPLOYMENT.md  HUGGINGFACE_QUICK_DEPLOY.md  Hackathon II - Todo Spec-Driven Development.md  KUBERNETES_SETUP.md  PHASE1_COMPLETE.md  PHASE2_READY.md  PHASE3_COMPLETE.md  PHASE3_DEPLOYMENT_STATUS.md  PHASE3_SUMMARY.md  QUICKSTART.md  QUICK_SETUP.md  README.md  RESTART_SERVERS.md  SETUP.md  SETUP_CHECKLIST.md  SUBMISSION_CHECKLIST.md  TASK_16_COMPLETION_SUMMARY.md  TEXT_FIX_SUMMARY.md  VERCEL_DEPLOYMENT_STEPS.md  VERIFICATION.md  deploy-all.sh  deploy-to-huggingface.sh  docker-compose.k8s.yml  docker-compose.yml  (+9 more)
backend/: .dockerignore  .env.example  CORE_API_VERIFICATION.md  Dockerfile  Dockerfile.huggingface  ERROR_HANDLING_DOCUMENTATION.md  INTEGRATION_TEST_REPORT.md  README.md  README_HUGGINGFACE.md  SETUP_VERIFICATION.md  TASK_5_VERIFICATION.md  drop_foreign_keys.sql  fix_database.py  requirements.txt  test_api_startup.py  test_auth_middleware.py  test_connection.py  test_error_handling.py  test_error_handling_simple.py  test_error_simple2.py  test_integration.py  test_models.py  test_task_endpoints.py
frontend/: .dockerignore  BETTER_AUTH_SETUP.md  Dockerfile  ERROR_HANDLING_IMPLEMENTATION.md  README.md  SETUP_COMPLETE.md  TASK_13_VERIFICATION.md  (+4 more)
(+81 files in other folders)
