[project]
name = "todo-app"
version = "0.1.0"
description = "Phase I: Console Todo Application - Evolution of Todo Hackathon"
requires-python = ">=3.13"
authors = [
    {name = "Hackathon Participant"}
]
readme = "README.md"

[project.scripts]
todo = "todo_app.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
